# splitwise-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: get_current_user.rs  remove_after_date.rs  sync_expenses.rs  users.rs
splitwise/: Cargo.toml
splitwise-cli/: Cargo.toml
splitwise-cli/src/: main.rs  mint.rs  sync.rs
splitwise/examples/: sync_expenses.rs
splitwise/src/: lib.rs
splitwise/src/client/: client.rs  comments.rs  expenses.rs  friends.rs  groups.rs  notifications.rs  other.rs  users.rs
splitwise/src/model/: comments.rs  expenses.rs  friends.rs  groups.rs  mod.rs  notifications.rs  other.rs  shared.rs  users.rs
splitwise/test/comments/: create_comment.POST.200.success.json  delete_comment.POST.200.success.json  get_comments.GET.200.success.json
splitwise/test/expenses/: delete_expense.POST.200.failure.json
splitwise/test/friends/: create_friend.POST.200.success.json  create_friends.POST.200.success.json  get_friends.GET.200.success.json
splitwise/test/groups/: get_group.GET.200.success.json  get_groups.GET.200.success.json
splitwise/test/notifications/: get_notifications.GET.200.success.json
splitwise/test/other/: get_categories.GET.200.success.json  parse_sentence.POST.200.success.json
splitwise/test/users/: get_current_user.GET.200.success.json  get_user.GET.200.success.json
src/: client.rs  errors.rs  expenses.rs  groups.rs  lib.rs  model.rs  notifications.rs  other.rs  users.rs
src/client/: client.rs  comments.rs  expenses.rs  friends.rs  groups.rs  mod.rs  notifications.rs  other.rs  users.rs
src/model/: comments.rs  expenses.rs  friends.rs  groups.rs  mod.rs  notifications.rs  other.rs  shared.rs  users.rs
test/expenses/: create_expense.POST.200.success.json  get_expense.GET.200.success.json  get_expenses.GET.200.success.json
test/friends/: delete_friend.POST.200.failure.json  delete_friend.POST.200.success.json  get_friend.GET.200.success.json
test/groups/: add_user_to_group.POST.200.failure.json  add_user_to_group.POST.200.success.json  remove_user_from_group.POST.200.failure.json  undelete_group.POST.200.failure.json
test/other/: get_currencies.GET.200.success.json
test/users/: get_current_user.GET.200.success.json  get_user.POST.200.success.json
