[package]
name = "splitwise"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0", features = ["json"] }
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["full"] }
