[package]
name = "splitwise-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "splitwise"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
