[package]
name = "splitwise-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "splitwise"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
clap = { version = "3", features = ["derive"] }
dialoguer = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
splitwise = { path = "../splitwise" }
tokio = { version = "1", features = ["full"] }
