[package]
name = "splitwise"
version = "0.3.0"
description = "Splitwise SDK for Rust"
authors = ["pbar <pbar1@users.noreply.github.com>"]
license = "Apache-2.0"
repository = "https://github.com/pbar1/splitwise-rs"
keywords = ["splitwise", "client", "money"]
categories = ["web-programming::http-client"]
rust-version = "1.56.1"
edition = "2021"
exclude = [
  ".github/*",
  "examples/*",
  "test/*",
]

# TODO: features

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
oauth2 = "4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.9"
serde_repr = "0.1"
tracing = "0.1"
url = "2"

[dev-dependencies]
env_logger = "0.9"
test-log = "0.2"
tokio = { version = "1", features = ["full"] }
csv = "1"
text_io = "0.1"
